[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
indexmap = { path = "../../..", features = ["serde-1"] }
serde_test = { git = "https://github.com/NexTokenTech/serde-sgx" }
fnv = { git = "https://github.com/NexTokenTech/rust-fnv-sgx" }
itertools = { version = "*", default-features = false }


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { ersion = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git"}
sgx_tstd = { ersion = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git"}
sgx_tunittest = { ersion = "1.1.6", git = "https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git"}
